# m1705567

./: CMakeLists.txt  game.cpp  game.h  gameover.cpp  gameover.h  gameover.ui  igrok.cpp  igrok.h  lives.cpp  lives.h  main.cpp  pulya.cpp  pulya.h  res.qrc  score.cpp  score.h  start.cpp  start.h  start.ui  vrag.cpp  vrag.h
